# Crystalline

./: .gitignore  .gitmodules  README.md
maps/tiled/: clouds.tsx  crystalline.tiled-session  grassy terrain.tsx  test.tmx
src/: CMakeLists.txt  collision.hpp  enemy.hpp  levelstate.hpp  main.cpp  state.hpp  title.hpp  titlestate.hpp
src/QuickGame/: CMakeLists.txt
src/QuickGame/include/: QuickGame.hpp
src/assets/maps/tiled/: crystalline.tiled-session  test.tmx
src/maps/tiled/: clouds.tsx  crystalline.tiled-session  test.tmx
